:arrow_up: replace netflix ribbon with spring cloud loadbalancer

--- a/ribbonclient/src/main/resources/application.properties
+++ b/ribbonclient/src/main/resources/application.properties
@@ -6,9 +6,12 @@ eureka.client.healthcheck.enabled=true
 eureka.instance.lease-renewal-interval-in-seconds=1
 eureka.instance.lease-expiration-duration-in-seconds=2
 
-ribbonserver.ribbon.eureka.enabled=true
+# disable spring cloud ribbon
+spring.cloud.loadbalancer.ribbon.enabled=false
+
+#ribbonserver.ribbon.eureka.enabled=true
 #ribbonserver.ribbon.listOfServers=localhost:9090,localhost:9091,localhost:9092
-ribbonserver.ribbon.ServerListRefreshInterval=1000
+#ribbonserver.ribbon.ServerListRefreshInterval=1000
 
 logging.level.root=info
 
