--- a/ribbonserver/src/main/resources/application.properties
+++ b/ribbonserver/src/main/resources/application.properties
@@ -9,6 +9,9 @@ eureka.instance.lease-expiration-duration-in-seconds=2
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger
 
+# disable spring cloud ribbon
+spring.cloud.loadbalancer.ribbon.enabled=false
+
 # spring actuator
 management.endpoint.health.enabled=true
 management.endpoint.info.enabled=true
