--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -10,6 +10,9 @@ eureka.client.fetch-registry=false
 eureka.instance.hostname=${springboot.app.name:eureka-serviceregistry}
 #eureka.instance.appname=eureka-demo
 
+# disable spring cloud ribbon
+spring.cloud.loadbalancer.ribbon.enabled=false
+
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger
 
